fixed comments and some clipping issues

--- a/EdmondsWebsite/edmonds.css
+++ b/EdmondsWebsite/edmonds.css
@@ -15,14 +15,11 @@ Extra Features:
 
     --page-font: "Gotham", "Helvetica", sans-serif;
     --para-font: "Lato", Arial, sans-serif;
-
-    --pill-radius: 90px;
-    --ui-radius: 5px;
 }
 
-/*--------------------
-        Base  
---------------------*/
+/*-----------------------
+        Base/Body
+------------------------*/
 *,
 *::before,
 *::after {
@@ -92,7 +89,7 @@ a:focus {
 }
 
 .box {
-    border-radius: var(--ui-radius);
+    border-radius: 5px;
     display: inline-block;
     font-weight: 600;
     margin: 0 5px;
@@ -104,7 +101,7 @@ a:focus {
 .box--grey { background: var(--grey-v1); }
 
 .header-items--bottom .pill {
-    border-radius: var(--pill-radius);
+    border-radius: 90px;
     display: inline-block;
     font-size: 0.95rem;
     margin: 0 10px;
@@ -166,9 +163,9 @@ a:focus {
     display: block;
     line-height: 1.5;
     margin: 0 0 8px 0;
-    text-transform: uppercase;
 }
-.blue-box-title__line-L { font-size: 48px; }
+
+.blue-box-title__line-L { font-size: 48px; text-transform: uppercase;}
 .blue-box-title__line-M { font-size: 24px; }
 
 .blue-box p {
@@ -271,7 +268,7 @@ a:focus {
   width: 100px;                     
   height: 80px;                     
   background: var(--blue);
-  color: #fff;
+  color: white;
   display: grid;
   place-items: center;              
   text-align: center;
@@ -314,4 +311,4 @@ a:focus {
 .footer-links li { padding: 10px; }
 .footer-column--center img { width: 300px; height: auto; display: block; margin-inline: auto; }
 
-.feature, .left-panel, .panel-right, .page-footer { overflow-wrap: anywhere; }
+.left-panel, .panel-right, .page-footer { overflow-wrap: anywhere; }
